--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A npm boilerplate with babel and dotenv",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon bin/dev",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && mkdir dist && babel server -s -d dist",
+    "production": "npm run build && nodemon bin/production"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/ragingscholar/npm-boilerplate/issues"
   },
-  "homepage": "https://github.com/ragingscholar/npm-boilerplate#readme"
+  "homepage": "https://github.com/ragingscholar/npm-boilerplate#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "dotenv": "^4.0.0",
+    "nodemon": "^1.12.0"
+  }
 }
